--- a/5.md
+++ b/5.md
@@ -240,13 +240,15 @@ Friedan found that marriage and motherhood did not relieve college-educated wome
 
 [^56]:	Betty Friedan, _The Feminine Mystique_ (New York: Laurel, 1983), 79.
 
-_Mystique_ was filled with stories of intelligent women who bowed to social expectations and cut short educational and career objectives in exchange for the “Mrs.” degree. The great contribution of the book was to provide a meaningful explanation of how the refurbished ideology of domesticity was spread and internalized. Friedan mapped the wide array of institutions that accepted and promulgated the premise that women's identity was defined by their biology. Among those she singled out were women’s magazines (more often than not edited by men for the stereotypical woman of the home), advertising that reinforced notions of childlike, oversexualized women, and psychology, especially that with a Freudian lineage. Advertising in Friedan’s view sexualized utilitarian objects, reinforcing beliefs that women’s sense of self depended upon their bodies, not their accomplishments. By affirming the incomplete female personality structure, psychology provided a supposedly unimpeachable scientific justification for the mystique. Modern-day psychological discourse put at the center of female psychology penis envy, the desire for the male organ and the power it embodied and posited that women could compensate for their incomplete nature by fully embracing motherhood. Despite their ubiquity, neither advertising nor psychology offered real satisfaction for women.
+_Mystique_ was filled with stories of intelligent women who bowed to social expectations and cut short educational and career objectives in exchange for the “Mrs.” degree. The great contribution of the book was to provide a meaningful explanation of how the refurbished ideology of domesticity was spread and internalized. Friedan mapped the wide array of institutions that accepted and promulgated the premise that women's identity was defined by their biology. Among those she singled out were women’s magazines (more often than not edited by men for the stereotypical woman of the home), advertising that reinforced notions of childlike, oversexualized women, and psychology, especially that with a Freudian lineage. Advertising in Friedan’s view sexualized utilitarian objects, reinforcing beliefs that women’s sense of self depended upon their bodies, not their accomplishments. By affirming the incomplete female personality structure, psychology provided a supposedly unimpeachable scientific justification for the mystique. Modern-day psychological discourse put penis envy, the desire for the male organ and the power it embodied, at the center of female psychology and posited that women could compensate for their lack by fully embracing motherhood. Despite their ubiquity, neither advertising nor psychology offered real satisfaction for women.
 
-Friedan’s argument for common humanity was rooted in the alternative psychology of Erikson and humanistic psychologist Abraham Maslow. Maslow posited a pyramid of needs ranging from the physiological at the bottom to the self-actualization at the apex. Self-actualization needs, which included morality, creativity, and spontaneity, came into play when individuals engaged in a quest to achieve their full potential. Neither Erikson nor Maslow applied their theories to women or were conceived that the development that they described pertained to them (310-11). By limiting women to the lower levels of Maslow’s hierarchy, Friedan maintained, society suffered. “If women’s needs for identity, for self-esteem, for achievement, and finally for expression of her unique human individuality are not recognized by herself or others in our culture, she is forced to seek identity and self-esteem in the only channels open to her: the pursuit of sexual fulfillment, motherhood, and the possession of material things” (315-6). Friedan therefore urged women to reject deadening housework (342), reduce their investment in marriage (344), and train themselves for meaningful work. “Who knows,” Friedan asked at the conclusion of her book, “of the possibilities of love when men and women share not only children, home, and garden, not only the fulfillment of their biological roles, but also the responsibilities and passions of the work that creates the human future and the full human knowledge of who they are?” (378).
+Friedan’s argument for common humanity was rooted in the alternative psychology of Erikson and humanistic psychologist Abraham Maslow. Maslow posited a pyramid of needs ranging from the physiological at the bottom to the self-actualization at the apex. Self-actualization needs, which included morality, creativity, and spontaneity, came into play when individuals engaged in a quest to achieve their full potential. Erikson's stages and Maslow's pyramid of development were conceived as tasks for men, but Friedan saw their applicability for women and for society. "If women’s needs for identity, for self-esteem, for achievement, and finally for expression of her unique human individuality are not recognized by herself or others in our culture, she is forced to seek identity and self-esteem in the only channels open to her: the pursuit of sexual fulfillment, motherhood, and the possession of material things” (315-6). Friedan therefore urged women to reject deadening housework (342), reduce their investment in marriage (344), and train themselves for meaningful work. “Who knows,” Friedan asked at the conclusion of her book, “of the possibilities of love when men and women share not only children, home, and garden, not only the fulfillment of their biological roles, but also the responsibilities and passions of the work that creates the human future and the full human knowledge of who they are?” (378).
 
-The _Feminine Mystique_ has rightly earned a place as a feminist classic --- one of those works that not only documents gender oppression but provides a coherent and meaningful account of how it occurs. The book’s staying power owes much to its incisive language that makes its critique both comprehensible and memorable. Friedan’s indictment of American gender relations struck an immediate responsive chord with her readers. Many women wrote to Friedan enthusiastically, crediting the book with giving voice to the dissatisfaction they felt and opening up possibilities to challenge what Friedan had termed the “comfortable concentration camp” of wife and mother roles.
+*The Feminine Mystique* has rightly earned a place as a feminist classic --- one of those works that not only documents gender oppression but provides a coherent and meaningful account of how it occurs. The book’s staying power owes much to its incisive language that makes its critique both comprehensible and memorable. Friedan’s indictment of American gender relations struck an immediate responsive chord with her readers. Many women wrote to Friedan enthusiastically, crediting the book with giving voice to the dissatisfaction they felt and opening up possibilities to challenge what Friedan had termed the “comfortable concentration camp” of wife and mother roles.
 
-The book was not without its limitations. Critics then and since have noted that Friedan at times both missed some of the sources of women’s exclusion and at others overstated their marginality. Friedan often let white middle-class suburban women stand in for women as a whole. By concentrating on college-educated women, she explored little of the experiences of working-class women or women of color, who were less likely to be subjected to the mystique or afford to forfeit a paycheck. Indeed, Friedan may well have overemphasized the postwar return to domesticity. Throughout the 1950s, the number of married women in the workforce grew by 42 percent. The feminist poet Eve Merriam even produced a children’s book, *Mommies at Work* (1961), to commemorate the condition.[^57] Susan Hartmann has shown that Cold War rhetoric simultaneously insisted that the family was a foundation of national defense and urged increased productivity. The first envisioned women in the home; the second implied places for them in the workforce. The National Manpower Council and the Commission on the Education of Women both recommended at one point child-care grants and supplements for higher education, particularly in the sciences.[^58] Nor could one say that the era lacked for creative woman. Their presence in no way refutes the notion of male domination of the arts but such women who came to prominence in the immediate postwar period as Hannah Arendt, Harriette Arnow, Elizabeth Bishop, Gwendolyn Brooks, Rachel Carson, Janet Flanner, Lorraine Hansberry, Margaret Mead, Mary McCarthy, Diana Trilling, Lillian Smith, Flannery O’Connor, and Jean Stafford constitute such significant contributions to postwar American letters as to complicate any notion of complete female silence.[^59] Others have pointed out that Friedan’s portrait of the intellectual climate was incomplete. For example, orthodox psychoanalytic opinion on gender and sexuality was considerably more varied than she acknowledged. Although there was a good deal of reductionism in psychoanalytic debates, there was also sectors of the analytic community that understood the domesticity in resolving psychological problems. Friedan used had Lundberg’s and Farnham’s misogynist _Modern Woman_ as representative of Freudianism, although neither author was an analyst and the _Psychoanalytic Journal_ criticized the book as retrograde and analytically confused.[^60] As historian Joanne Meyerowitz has shown in her extensive study of women’s magazines, the mainstream press offered mixed messages. Readers were just as likely as not to find articles praising female creativity and assertion, rejecting nurturing love as the highest expression of femininity, and recommending marriages based on true sharing.[^61]
+The book was not without its limitations. Critics then and since have noted that Friedan at times both missed some of the sources of women’s exclusion and at others overstated their marginality. Friedan often let white middle-class suburban women stand in for women as a whole. By concentrating on college-educated women, she explored little of the experiences of working-class women or women of color, who were less likely to be subjected to the mystique or to be able to forfeit a paycheck. Indeed, Friedan may well have overemphasized the postwar return to domesticity. Throughout the 1950s, the number of married women in the workforce grew by 42 percent. The feminist poet Eve Merriam even produced a children’s book, *Mommies at Work* (1961), to commemorate the condition.[^57] Susan Hartmann has shown that Cold War rhetoric simultaneously insisted that the family was a foundation of national defense and urged increased productivity. The first envisioned women in the home; the second implied places for them in the workforce. The National Manpower Council and the Commission on the Education of Women both recommended at one point child-care grants and supplements for higher education, particularly in the sciences.[^58] Nor could one say that the era lacked for creative woman. Their presence in no way refutes the notion of male domination of American letters but the postwar prominence of such female authors as Hannah Arendt, Harriette Arnow, Elizabeth Bishop, Gwendolyn Brooks, Rachel Carson, Janet Flanner, Lorraine Hansberry, Margaret Mead, Mary McCarthy, Diana Trilling, Lillian Smith, Flannery O’Connor, and Jean Stafford make the era as filled with women's voices as any previous period.[^59]
+
+Others have pointed out that Friedan’s portrait of the intellectual climate was incomplete. For example, orthodox psychoanalytic opinion on gender and sexuality was considerably more varied than she acknowledged. Although there was a good deal of reductionism in psychoanalytic debates, there were also sectors of the analytic community that understood the domesticity in resolving psychological problems. Friedan used had Lundberg’s and Farnham’s misogynist _Modern Woman_ as representative of Freudianism, although neither author was an analyst and the _Psychoanalytic Journal_ criticized the book as retrograde and analytically confused.[^60] As historian Joanne Meyerowitz has shown in her extensive study of women’s magazines, the mainstream press offered mixed messages. Readers were just as likely as not to find articles praising female creativity and assertion, rejecting nurturing love as the highest expression of femininity, and recommending marriages based on true sharing.[^61]
 
 [^57]:	Eve Merriam, _Mommies at Work_ (New York: Knopf, 1961).
 
@@ -258,7 +260,7 @@ The book was not without its limitations. Critics then and since have noted that
 
 [^61]:	Joanne Meyerowitz, “Beyond the Feminine Mystique: A Reassessment of Postwar Mass Culture, 1946- 1958,” in Meyerowitz, _Not June Cleaver_, 229-62.
 
-Contrary to legend, Friedan did not singlehandedly revive feminism or solely provide its intellectual basis. Other contemporary feminists recognized the role of biology and psychology in providing justification for circumscribing female aspiration. Such prominent writers as Ruth Herschberger (1917-2014) and Eve Merriam (1916-1992) provided incisive dissents from the conventional wisdom about women’s nature and sharp arguments for their emancipation from restricted status. Like Friedan, Herschberger and Merriam were also Jewish, held advanced degrees, and had left-wing connections. Like _Mystique_, Herschberger’s _Adam’s Rib_ (1948) and Merriam’s _After Nora Slammed the Door: American Women in the 1960s, The Unfinished Revolution_ (1964) opposed motherhood as the sole natural role for women and female deference as a _modus operandi_. The books also shared a resolve to chart the institutions that restricted women’s possibilities, a project Merriam had undertaken as well with _Figleaf_ (1960), an analysis of the fashion industry’s manipulation of women.[^62]
+Contrary to legend, Friedan did not singlehandedly revive feminism or provide its intellectual basis. Other contemporary feminists recognized the role of biology and psychology in providing justification for circumscribing female aspiration. Such prominent writers as Ruth Herschberger (1917-2014) and Eve Merriam (1916-1992) provided incisive dissents from the conventional wisdom about women’s nature and sharp arguments for their emancipation from restricted status. Like Friedan, Herschberger and Merriam were also Jewish, held advanced degrees, and had left-wing connections. Like _Mystique_, Herschberger’s _Adam’s Rib_ (1948) and Merriam’s _After Nora Slammed the Door: American Women in the 1960s, The Unfinished Revolution_ (1964) opposed motherhood as the sole natural role for women and female deference as a _modus operandi_. The books also shared a resolve to chart the institutions that restricted women’s possibilities, a project Merriam had undertaken as well with _Figleaf_ (1960), an analysis of the fashion industry’s manipulation of women.[^62]
 
 [^62]:	Eve Merriam, *After Nora Slammed the Door* (Cleveland: World Pub. Co., 1964); Eve Merriam, *Figleaf: The Business of Being in Fashion* (Philadelphia: Lippincott, 1960); Ruth Herschberger, *Adam’s Rib* (New York: Pellegrini & Cudahy, 1948).
 
@@ -277,34 +279,38 @@ It also alerted the larger heterosexual community to their presence and prompted
 
 [^66]:	Marcia M. Gallo, _Different Daughters: A History of the Daughters of Bilitis and the Rise of the Lesbian Rights Movement_ (New York: Carroll & Graf Publishers, 2006), 28; Kaiser, _The Gay Metropolis: 1940-1996_, 68-72.
 
-The war also accelerated the medicalization of same-sex attraction and gender transgression. As psychiatrists examined draftees for their suitability for service, they derived criteria that would classify the population as normal or abnormal. Freud’s own 1937 judgment that homosexuality, while no advantage, was nothing to “be ashamed of, no vice, no degradation, it cannot be classified as an illness,” made no impression in a psychoanalytic atmosphere devoted to adjustment and orderly development. Instead, a sizable portion of the psychiatric and psychoanalytic communities devoted itself to “curing” homosexuality. Prevailing theory held same-sex desire as a result of incomplete Oedipal resolutions often caused by improper parenting. Few “cures” succeeded.[^67]
+The war also accelerated the medicalization of same-sex attraction and gender transgression. As psychiatrists examined draftees for their suitability for service, they derived criteria that would classify the population as normal or abnormal.[^67] Freud’s own 1937 judgment that homosexuality, while no advantage, was nothing to “be ashamed of, no vice, no degradation, it cannot be classified as an illness,” made no impression in a psychoanalytic atmosphere devoted to adjustment and orderly development. Instead, a sizable portion of the psychiatric and psychoanalytic communities devoted itself to “curing” homosexuality. Prevailing theory held same-sex desire as a result of incomplete Oedipal resolutions often caused by improper parenting. Few “cures” succeeded.
 
 
 [^67]:	Allan Berube, _Coming Out Under Fire: The History of Gay Men and Women in World War Two_ (New York: Free Press, 1990).
 
-Despite public condemnation, gay men and women often managed to live lives outside the closet in the immediate postwar years. In some fields, homosexual men and women lived in a liminal state --- not openly identifying as gay but not in denial either. Remarkably, a good number of gays and lesbians affirmed their belonging. In some fields, for instance, the homosexuality did them little damage. This liminal state in which one’s homosexuality was known to one’s peers but not publicly acknowledged was typical of the music and theater worlds. Musicians knew of Leonard Bernstein’s and Aaron Copeland’s homosexuality, which did not damage their careers as most likely would have been the case had they other professions. Bernstein went on to write the music for the incomparable _West Side Story_, working with other gay men, choreographer Jerome Robbins, lyricist Stephen Sondheim, and author Arthur Laurents. Robbins, a one-time Communist Party member, had resisted naming names until threatened with public revelation of his homosexual trysts.[^68] Civil rights activist and pacifist Bayard Rustin was not purged from organizations after his arrest for “lewd behavior,” although he was often shunted to the background.
+Despite public condemnation, gay men and women often managed to live lives outside the closet in the immediate postwar years. In some fields, for instance, the homosexuality did them little damage. This liminal state in which one’s homosexuality was known to one’s peers but not publicly acknowledged was typical of the music and theater worlds. Musicians knew of Leonard Bernstein’s and Aaron Copeland’s homosexuality, which did not damage their careers as most likely would have been the case had they other professions. Bernstein went on to write the music for the incomparable _West Side Story_, working with other gay men, choreographer Jerome Robbins, lyricist Stephen Sondheim, and author Arthur Laurents. Robbins, a one-time Communist Party member, had resisted naming names until threatened with public revelation of his homosexual trysts.[^68] Civil rights activist and pacifist Bayard Rustin was not purged from organizations after his arrest for “lewd behavior,” although he was often shunted to the background.
 
 [^68]:	Kaiser, _The Gay Metropolis_, 74.
 
-The push for belonging intensified with the founding of two homophile societies in the 1950s. The Mattachine Society, founded in 1950 in Los Angeles by Henry Hay, a member of the Communist Party, and supported by designer Rudy Gernreich, originally aimed at establishing unity among gay men to fight anti-gay discrimination and police entrapment and from that struggle to create a “an ethical homosexual culture” modeled on that of “Negro, Mexican, and Jewish peoples.” The Daughters of Bilitis, an organization for lesbians begun in San Francisco by Phyllis Lyon and Del Martin in 1955, very soon defined itself as “A Woman's Organization for the purpose of Promoting the Integration of the Homosexual into Society.”[^69] Membership of both organization was at first small (Mattachine was patterned on the Communist Party with cells, different levels of membership, and a commitment to developing a group consciousness as an oppressed “class” in order to liberate themselves), but reached 2,000 in Southern California by 1953. Cold War worries led to the resignation of Hay and other Communists the same year.
+The push for belonging intensified with the founding of two homophile societies in the 1950s. The Mattachine Society, founded in 1950 in Los Angeles by Henry Hay, a member of the Communist Party, and supported by fashion designer Rudy Gernreich, originally aimed at establishing unity among gay men to fight anti-gay discrimination and police entrapment and to create “an ethical homosexual culture” modeled on those of the “Negro, Mexican, and Jewish peoples.” The Daughters of Bilitis, an organization for lesbians begun in San Francisco by Phyllis Lyon and Del Martin in 1955, very soon defined itself as “A Woman's Organization for the purpose of Promoting the Integration of the Homosexual into Society.”[^69] Membership of both organization was at first small (Mattachine, patterned on the Communist Party, had cells, different levels of membership, and a commitment to developing a group consciousness as an oppressed “class” in order to liberate themselves), but reached 2,000 in Southern California by 1953. Cold War worries led to the resignation of Hay and other Communists the same year.
 
 [^69]:	Jonathan Katz, _Gay American History_ (New York: Crowell, 1976), 426.
 
-The new leadership was considerably less militant. The legal director of the Mattachine Society accepted that the police were right to prevent public indecencies but hoped that authorities would accept that sexual activity between consenting adults was a private matter when done in private and should be of no interest to the law. Engaged in projects of public education, members of the homophile organizations rarely broached the notion of Fourteenth Amendment equal protection rights for all gays, emphasizing instead the need for gay respectability. The Daughters of Bilitis journal, _The Ladder_, printed on the inside cover the organization’s statement of purpose that emphasized education for the “variant” (one of the various euphemisms for homosexuals) in order that she would understand herself and hasten adjustment to society. To that end, the organization pledged to encourage dress and manners acceptable to mainstream society on the grounds that gender nonconforming behavior alienated potential allies. Historian Nan Boyd has characterized the attitude as “change can only be accomplished in the proper way and manner and by the proper people” and has noted that it did not prevent ordinary gay and lesbians to claim their own space and construct throughout the 1950s a burgeoning queer culture.[^70]
+The new leadership was considerably less militant. The legal director of the Mattachine Society accepted that the police were right to prevent public indecencies but hoped that authorities would accept that sexual activity between consenting adults was of no interest to the law when done between consenting adults in private. Engaged in projects of public education, members of the homophile organizations rarely broached the notion of Fourteenth Amendment equal protection rights for all gays, emphasizing instead the need for gay respectability. The Daughters of Bilitis journal, _The Ladder_, printed on the inside cover the organization’s statement of purpose that emphasized education for the “variant” (one of the various euphemisms for homosexuals) in order that she would understand herself and hasten adjustment to society. To that end, the organization pledged to encourage dress and manners acceptable to mainstream society on the grounds that gender nonconforming behavior alienated potential allies. Historian Nan Boyd has characterized the attitude as “change can only be accomplished in the proper way and manner and by the proper people” and has noted that it did not prevent ordinary gay and lesbians from claiming their own space and constructing a burgeoning queer culture.[^70]
 
 [^70]:	Boyd, _Wide-Open Town_, 173.
 
-A few scientists provided intellectual support for the contention of homophile organizations that homosexuals shared attitudes and values with those in the mainstream. Alfred Kinsey had attracted attention, albeit often quite negative, for his placing sexuality on a spectrum rather than arguing for a hetero-homosexual divide. He had come to the position because his findings indicated that same-sex contact was more prevalent than expected. Less publicized but more significant was the work of Evelyn Hooker. A psychologist, Hooker undertook the study of homosexual mental health after the challenge of one of her homosexual students at UCLA. Based on her exchanges with him and his friends, she came to doubt the prevailing understanding of homosexuality as an illness. Aided by the Mattachine Society, she chose thirty homosexuals and thirty heterosexual men and paired them according to IQ and education. None had sought psychological help or spent time in prison. She administered her subjects the leading personality tests of the day, including the Thematic Apperception Test and the Rorschach Inkblot tests, and had the leading practitioners evaluate the tests without informing them of the sexual orientation of the test takers. Despite prior claims that the tests would reveal the inner and deformed internal makeup of gay men, the evaluators could discern no difference between homo- and heterosexual men, bolstering the case for complete inclusion. Although Hooker’s work first appeared in 1957 and was often duplicated, it took until 1973 for the American Psychiatric Association to remove homosexuality from its manual of disorders.[^71]
+A few scientists provided intellectual support for the contention of homophile organizations that homosexuals shared attitudes and values with those in the mainstream. Alfred Kinsey had attracted attention, albeit often quite negative, for his placing sexuality on a spectrum rather than arguing for a hetero-homosexual divide. He had come to the position because his findings indicated that same-sex contact was more prevalent than expected. Less publicized but more significant was the work of Evelyn Hooker. A psychologist, Hooker undertook the study of homosexual mental health after a challenge from one of her homosexual students at UCLA. Based on her exchanges with him and his friends, she came to doubt the prevailing understanding of homosexuality as an illness. Aided by the Mattachine Society, she chose thirty homosexuals and thirty heterosexual men and paired them according to IQ and education. None had sought psychological help or spent time in prison. She administered her subjects the leading personality tests of the day, including the Thematic Apperception Test and the Rorschach Inkblot tests, and had the leading practitioners evaluate the tests without informing them of the sexual orientation of the test takers. Despite prior claims that the tests would reveal the inner and deformed internal makeup of gay men, the evaluators could discern no difference between homo- and heterosexual men, bolstering the case for complete inclusion. Although Hooker’s work first appeared in 1957 and was often duplicated, it took until 1973 for the American Psychiatric Association to remove homosexuality from its manual of disorders.[^71]
 
 [^71]:	Henry L. Minton, _Departing From Deviance: A History of Homosexual Rights and Emancipatory Science in America_ (Chicago: University of Chicago Press, 2002), 219-36.
 
-Perhaps the most fascinating account of the experience of homosexuality was Donald Webster Cory’s _The Homosexual in America: A Subjective Approach_ (1951). Cory was the pen name of Edward Sagarin and his book was part testimonial of his own wrenching struggles with his sexuality, part investigation, and part political statement. Cory set out to delineate both what it was like to be a homosexual and what social and political dynamics governed it. He disputed that homosexuality was unnatural since it had always existed, that it threatened the ability of civilization to reproduce itself, and that homosexuals were moral outlaws. The “sordid character of” gay men stemmed from the social attitudes that victimized them, he countered. “A person cannot live in an atmosphere of universal rejection, of widespread pretense, of a society that outlaws and banishes his activities and his desires, of a social world that jokes and sneers at every turn, without a fundamental influence on his personality.”[^72] Just as white society created the Negro problem, so too did heterosexual society create the homosexual problem. To be gay was to be caught in a vicious circle, having inequality forced on one but then having the consequences of that inequality used to justify inequality in the first place. The solution, Cory held, was to speak forthrightly as gay people. That gay men could so easily pass was not a blessing. “Actually, the inherent tragedy --- not the saving grace --- of homosexuality is found in the ease of concealment. If the homosexual were as readily recognizable as . . . other minority groups, the social condemnation could not possibly exist. Stereotype thinking on the part of the majority would . . . collapse of its own absurdity if all of us who are gay were known for what we are. . . . If only all of the inverts, the millions in all lands, could simultaneously rise up in our full strength!”[^73] A gay organization should aim not for social tolerance --- which Sagarin defined as the condescension of the superior for the inferior or the evil --- but for acceptance on equal footing.
+Perhaps the most fascinating account of the experience of homosexuality was Donald Webster Cory’s _The Homosexual in America: A Subjective Approach_ (1951). Cory was the pen name of Edward Sagarin and his book was part testimonial of his own wrenching struggles with his sexuality, part investigation, and part political statement. Cory set out to delineate both what it was like to be a homosexual and what social and political dynamics governed it. The long history of homosexuality enabled him to dispute the characterization of homosexuality as unnatural and a threat to civilization and homosexuals as moral outlaws. The “sordid character of” gay men stemmed from the social attitudes that victimized them, he countered. “A person cannot live in an atmosphere of universal rejection, of widespread pretense, of a society that outlaws and banishes his activities and his desires, of a social world that jokes and sneers at every turn, without a fundamental influence on his personality.”[^72] Just as white society created the Negro problem, so too did heterosexual society create the homosexual problem. To be gay was to be caught in a vicious circle, having inequality forced on one but then having the consequences of that inequality used to justify inequality in the first place.
+
+The solution, Cory held, was to speak forthrightly as gay people. That gay men could so easily pass was not a blessing. “Actually, the inherent tragedy --- not the saving grace --- of homosexuality is found in the ease of concealment. If the homosexual were as readily recognizable as . . . other minority groups, the social condemnation could not possibly exist. Stereotype thinking on the part of the majority would . . . collapse of its own absurdity if all of us who are gay were known for what we are. . . . If only all of the inverts, the millions in all lands, could simultaneously rise up in our full strength!”[^73] A gay organization should aim not for social tolerance --- which Sagarin defined as the condescension of the superior for the inferior or the evil --- but for acceptance on equal footing.
 
 [^72]:	Donald Webster Cory, _The Homosexual in America: A Subjective Approach_ (New York: Greenberg Publisher, 19151) 12.
 
 [^73]:	Cory, 230.
 
-Although Cory’s book inspired numerous gay and lesbian readers, he himself stayed in the closet for much of his life. As Sagarin, he went on to be a professor of sociology who specialized in deviance and contended homosexuality was not normal. Even as Corey in the late 1950s and early 1960s, he rejected Hooker’s dismissal of the deviance model as unscientific. Having undertaken his 1951 book to demonstrate that same-sex desire was “involuntary, as if inborn,” Corey accepted that homosexuality was attributable to family dysfunction and that the well-adjusted homosexual was a fiction. Efforts to win office in the New York Mattachine Society came to naught. Sagarin later opposed gay liberation and condemned the gender transgressions. Nonetheless Sagarin paved the way for numerous attacks on the closet. Jenette Howard Foster, who had worked as a librarian at Indiana University for Alfred Kinsey’s sex research projects, self-published _Sex Variant Women in Literature_ in the 1956. The book enjoyed something of a _samizdat_ life until reissued in 1975. By the late 1960s the gender non-conforming behavior and dress that appeared in numerous gay and lesbian cultures not only in large coastal cities of Los Angeles, San Francisco, and New York, but also, as Elizabeth Lapovsky Kennedy and Madeline D. Davis have demonstrated in the working-class precincts of Buffalo were commonplaces.[^74] That Sagarin/Corey did not recognized the realization of his wish that homosexuals speak as themselves is testimony how the struggle for inclusion created divisions not only among homosexuals but, in this case, in the personality of one of its original advocates.
+Although Cory’s book inspired numerous gay and lesbian readers, he himself stayed in the closet for much of his life. As Sagarin, he went on to be a professor of sociology who specialized in deviance and contended homosexuality was not normal. Even as Corey in the late 1950s and early 1960s, he rejected Hooker’s dismissal of the deviance model as unscientific. Having undertaken his 1951 book to demonstrate that same-sex desire was “involuntary, as if inborn,” Corey accepted that homosexuality was attributable to family dysfunction and that the well-adjusted homosexual was a fiction. Efforts to win office in the New York Mattachine Society came to naught. Sagarin later opposed gay liberation and condemned the gender transgressions.
+
+Nonetheless Sagarin paved the way for numerous attacks on the closet. Jenette Howard Foster, who had worked as a librarian at Indiana University for Alfred Kinsey’s sex research projects, self-published _Sex Variant Women in Literature_ in the 1956. The book enjoyed something of a _samizdat_ life until reissued in 1975. By the late 1960s the gender non-conforming behavior and dress that appeared in numerous gay and lesbian cultures not only in large coastal cities of Los Angeles, San Francisco, and New York, but also, as Elizabeth Lapovsky Kennedy and Madeline D. Davis have demonstrated in the working-class precincts of Buffalo were commonplaces.[^74] That Sagarin/Corey did not recognized the realization of his wish that homosexuals speak as themselves is testimony how the struggle for inclusion created divisions not only among homosexuals but, in this case, in the personality of one of its original advocates.
 
 [^74]:	Elizabeth Lapovsky Kennedy and Madeline D. Davis, _Boots of Leather, Slippers of Gold: The History of a Lesbian Community_ (New York: Routledge, 2014); Kaiser, _The Gay Metropolis_, 125-30.
 
